# ort

./: Cargo.toml
ort/: Cargo.toml
ort-sys/: Cargo.toml
ort-sys/src/: allocator.rs  api.rs  callback.rs  ctypes.rs  environment.rs  error.rs  generate-sys.sh  io_binding.rs  kernel.rs  lib.rs  logger.rs  memory_info.rs  run_options.rs  session.rs  session_options.rs  status.rs  string.rs  sys.rs  tensor.rs  value.rs
ort/src/: lib.rs
